Fixed text overflow

--- a/static/web/styles.css
+++ b/static/web/styles.css
@@ -8,7 +8,7 @@
 .blink_me {
     animation: blinker 0.2s linear infinite;
     text-align: center;
-    font-size: 12.5vw;
+    /*font-size: 12.5vw;*/
     position: absolute;
     left: 50%;
     top: 50%;
